--- a/public/index.html
+++ b/public/index.html
@@ -4,7 +4,58 @@
     <meta charset="utf-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width,initial-scale=1.0" />
+    <meta
+      name="description"
+      content='Play "Kennections" trivia puzzles, but interactive!'
+    />
+    <meta name="image" content="https://jonuleis.com/kennections/share.png" />
+    <meta itemprop="name" content="Kennections Player" />
+    <meta
+      itemprop="description"
+      content='Play "Kennections" trivia puzzles, but interactive!'
+    />
+    <meta
+      itemprop="image"
+      content="https://jonuleis.com/kennections/share.png"
+    />
+    <meta property="og:title" content="Kennections Player" />
+    <meta
+      property="og:description"
+      content='Play "Kennections" trivia puzzles, but interactive!'
+    />
+    <meta
+      property="og:image"
+      content="https://jonuleis.com/kennections/share.png"
+    />
+    <meta property="og:image:width" content="1200" />
+    <meta property="og:image:height" content="630" />
+    <meta property="og:url" content="https://jonuleis.com/kennections/" />
+    <meta property="og:site_name" content="Kennections Player" />
+    <meta property="og:locale" content="en_US" />
+    <meta property="og:type" content="website" />
+    <meta name="twitter:card" content="summary_large_image" />
+    <meta name="twitter:title" content="Kennections Player" />
+    <meta
+      name="twitter:description"
+      content='Play "Kennections" trivia puzzles, but interactive!'
+    />
+    <meta
+      name="twitter:image"
+      content="https://jonuleis.com/kennections/share.png"
+    />
     <title>Kennections Player</title>
+    <script
+      async
+      src="https://www.googletagmanager.com/gtag/js?id=UA-34406365-1"
+    ></script>
+    <script>
+      window.dataLayer = window.dataLayer || [];
+      function gtag() {
+        dataLayer.push(arguments);
+      }
+      gtag("js", new Date());
+      gtag("config", "UA-34406365-1");
+    </script>
   </head>
   <body>
     <noscript>
